dartagnan/src/test/resources/spirv-clang/benign_race_tests/pass/writeinloop.spv.dis
; @Config: 3, 1, 3
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 16
; Schema: 0
               OpCapability Addresses
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %6 "foo"
               OpSource OpenCL_C 200000
               OpDecorate %7 FuncParamAttr NoCapture
       %uint = OpTypeInt 32 0
    %uint_42 = OpConstant %uint 42
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %5 = OpTypeFunction %void %_ptr_Workgroup_uint %uint %uint
       %bool = OpTypeBool
          %6 = OpFunction %void None %5
          %7 = OpFunctionParameter %_ptr_Workgroup_uint
          %8 = OpFunctionParameter %uint
          %9 = OpFunctionParameter %uint
         %10 = OpLabel
         %14 = OpULessThan %bool %8 %9
               OpBranchConditional %14 %11 %12
         %11 = OpLabel
               OpStore %7 %uint_42 Aligned 4
               OpBranch %12
         %12 = OpLabel
               OpReturn
               OpFunctionEnd
